<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright 2020-2022 Leon Latsch
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<resources>

    <!-- COMMON -->
    <string name="app_name">Photo Locker</string>
    <string name="common_copyright_notice">Copyright \u00A9 2020–2023 Leon Latsch</string>
    <string name="common_slash">/</string>
    <string name="common_percent">%</string>
    <string name="common_delete">Delete</string>
    <string name="common_export">Export</string>
    <string name="common_error">There was an error. Please try again.</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_bullet">•</string>

    <!-- IMPORT -->
    <string name="import_importing">Importing File(s)</string>
    <string name="import_permission_rationale">Photok needs to access your storage, to import files.</string>
    <string name="import_sharted_question">Do you want to import %1$d file(s)?</string>

    <!-- SETUP -->
    <string name="setup_create_your_password">Create Password</string>
    <string name="setup_enter_password">Enter your password</string>
    <string name="setup_confirm_password">Confirm your password</string>
    <string name="setup_password_strength_label">Password strength:</string>
    <string name="setup_button">Create Password</string>
    <string name="setup_password_strength_weak">Weak</string>
    <string name="setup_password_strength_moderate">Moderate</string>
    <string name="setup_password_strength_strong">Strong</string>
    <string name="setup_password_match_warning">\u26A0 Passwords do not match</string>
    <string name="setupSetup">Create a strong password for SecureGuard to safeguard your data. Use a mix of uppercase, lowercase, numbers, and symbols for enhanced security.</string>

    <!-- UNLOCK -->
    <string name="unlock_title">Unlock your Safe</string>
    <string name="unlock_title_desc">Your password in required to view the photo and video in Safe</string>
    <string name="unlock_enter_password">Enter password</string>
    <string name="unlock_button">Enter Password</string>
    <string name="unlock_wrong_password">\u26A0 Wrong password</string>

    <!-- GALLERY -->
    <string name="gallery_placeholder">There are no files in your safe</string>
    <string name="gallery_all_photos_label">All files</string>

    <!-- IMPORT MENU -->
    <string name="import_menu_title">Import</string>
    <string name="import_menu_photos">Photos</string>
    <string name="import_menu_videos">Videos</string>
    <string name="import_menu_backup">Backup</string>
    <string name="import_menu_hint">Add media items to Photo Wallet…</string>

    <!-- PROCESS -->
    <string name="process_close">Close</string>
    <string name="process_abort">Abort</string>
    <string name="process_finished">Finished</string>
    <string name="process_initialize">Preparing…</string>
    <string name="process_aborted">Aborted</string>
    <string name="process_failures_occurred">\u26A0 Some elements could not get processed</string>

    <!-- VIEW PHOTO -->
    <string name="view_photo_detail_title">Details</string>
    <string name="view_photo_detail_file_name_label">Filename:</string>
    <string name="view_photo_detail_import_at_label">Imported at:</string>
    <string name="view_photo_detail_file_type_label">File Type:</string>
    <string name="view_photo_detail_size_label">File size:</string>

    <!-- MAIN MENU -->
    <string name="menu_main_lock">Lock</string>
    <string name="menu_main_settings">Settings</string>

    <!-- MULTI SELECT MENU -->
    <string name="menu_ms_select_all">Select All</string>
    <string name="menu_ms_delete">Delete</string>
    <string name="menu_ms_export">Export</string>

    <!-- DELETE -->
    <string name="delete_are_you_sure">Are you sure, you want to <b>delete</b> %1$d file(s)?</string>
    <string name="delete_are_you_sure_this">Are you sure, you want to <b>delete</b> this file?</string>
    <string name="delete_deleting">Deleting file(s)…</string>

    <!-- EXPORT -->
    <string name="export_are_you_sure">Are you sure, you want to <b>export</b> %1$d file(s), back to your gallery?</string>
    <string name="export_are_you_sure_this">Are you sure, you want to <b>export</b> this file to your gallery?</string>
    <string name="export_exporting">Exporting file(s)…</string>
    <string name="export_permission_rationale">Photok needs to access your storage, to export files.</string>
    <string name="export_finished">Exported</string>

    <!-- ABOUT -->

    <!-- SETTINGS -->

    <string name="settings_category_gallery">Gallery</string>
    <string name="settings_gallery_auto_fullscreen_title">Auto Fullscreen</string>
    <string name="settings_gallery_auto_fullscreen_summary">Enter fullscreen mode when opening a file</string>

    <string name="settings_category_security">Security</string>
    <string name="settings_security_allow_screenshots_title">Allow Screenshots</string>
    <string name="settings_security_allow_screenshots_summary">Allow taking screenshot. Requires restart.</string>
    <string name="settings_security_change_password_title">Change Password</string>
    <string name="settings_security_change_password_summary">Change your password</string>
    <string name="settings_security_timeout_title">Automatic Lock Timeout</string>
    <string name="settings_security_timeout_summary">Automatic lock after given time in background</string>
    <string name="settings_security_timeout_immediately">Immediately</string>
    <string name="settings_security_timeout_one_minute">1 Minute</string>
    <string name="settings_security_timeout_two_minute">2 Minutes</string>
    <string name="settings_security_timeout_five_minute">5 Minutes</string>
    <string name="settings_security_timeout_ten_minute">10 Minutes</string>
    <string name="settings_security_timeout_never">Never</string>

    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_advanced_summary">Use carefully</string>
    <string name="settings_advanced_reset_title">Reset Safe</string>
    <string name="settings_advanced_reset_summary">Wipe data and reset password</string>
    <string name="settings_advanced_reset_confirmation">Do you REALLY want to reset your safe? All data will be lost!</string>
    <string name="settings_advanced_backup_title">Backup</string>
    <string name="settings_advanced_backup_summary">Create a backup of your safe</string>
    <string name="settings_advanced_delete_imported_title">Delete imported files</string>
    <string name="settings_advanced_delete_imported_summary">Delete files after importing them</string>

    <string name="settings_other_feedback_title">Feedback</string>
    <string name="settings_other_feedback_summary">Send me an email with feedback</string>
    <string name="settings_other_feedback_mail_subject">Feedback to Photok</string>
    <string name="settings_other_feedback_mail_body">Write a feedback about Photok :)</string>
    <string name="settings_other_feedback_mail_emailaddress">imarsal777@gmail.com</string>
    <string name="settings_other_about_title">About</string>
    <string name="settings_other_about_summary">Information about Photo Wallet</string>

    <!-- CREDITS -->


    <!-- CHANGE PASSWORD -->
    <string name="change_password_title">Change your Password</string>
    <string name="change_password_old_password">Old Password</string>
    <string name="change_password_new_password">New Password</string>
    <string name="change_password_check">Check</string>
    <string name="change_password_enter_new_password">Enter your new password</string>
    <string name="change_password_confirm_new_password">Confirm your new password</string>
    <string name="change_password_button">Change Password</string>
    <string name="change_password_confirm_message">Backup recommended!<br /> Changing your password requires re-encrypting all your files! Do you want to continue?</string>
    <string name="change_password_reencrypting">Re-encrypting file(s)…</string>

    <!-- HIDE APP -->

    <!-- ON BOARDING -->
    <string name="onboarding_next">Next</string>
    <string name="onboarding_finish">Finish</string>
    <string name="onboarding_skip"><u>Skip</u></string>

    <string name="onboarding_slide1_title">Welcome</string>
    <string name="onboarding_slide1_description">
        Securely store and protect your private photos and videos with our
        Photo Vault App. Enjoy password protection,
        biometric authentication,and advanced privacy
        features for ultimate peace of mind.</string>
    <string name="onboarding_slide2_title">Create a password</string>
    <string name="onboarding_slide2_description">Protect your private media with a password in our Photo Vault App. Ensure exclusive access to your sensitive photos and videos for enhanced security and peace of mind.</string>
    <string name="onboarding_slide3_title">Start Importing</string>
    <string name="onboarding_slide3_description">Import your photos and videos with ease into our Photo Vault App for enhanced privacy and security. Safely transfer your media files into the encrypted vault for complete peace of mind.</string>

    <!-- BACKUP -->
    <string name="backup_processing_title">Creating backup…</string>
    <string name="backup_restore_title">Restore Backup</string>
    <string name="backup_restore_validating">Validating backup…</string>
    <string name="backup_restore_details_created_at">Created at:</string>
    <string name="backup_restore_details_photos_contained">Contained Files:</string>
    <string name="backup_restore_details_size">Size:</string>
    <string name="backup_restore_button">Unlock and Restore</string>
    <string name="backup_restore_invalid_file">\u26A0 Invalid File</string>
    <string name="backup_restore_processing">Restoring Backup…</string>
    <string name="backup_unlock_title">Unlock Backup</string>

    <!-- NEWS -->
    <string name="news_new_in_title">New feature</string>
    <string name="news_view_changelog">View Changelog</string>
    <string name="aboutus" translatable="false">https://facebook.com</string>

    <string name="news_title_1">Auto Delete</string>
    <string name="news_summary_1">Automatically delete files when importing them to Photo Wallet.</string>

    <!-- Recovery Menu -->
    <string name="recovery_subtitle">Recovery Menu</string>
    <string name="recovery_menu_item_open_photok">Open Photok</string>
    <string name="recovery_subtitle_reset_hide_app">Reset Hide App Setting</string>

    <string name="app_id">ca-app-pub-9149322965349927~4617775585</string>
    <string name="inter_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="start_open_ad_id">  ca-app-pub-3940256099942544/9257395921</string>
</resources>
