<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright 2020-2021 Leon Latsch
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".setup.ui.SetupFragment">

    <data>

        <variable
            name="viewModel"
            type="com.lockmedia.applock.setup.ui.SetupViewModel"
            android:visibility="visible" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_password_setup"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="510dp"
            android:background="@drawable/lock_white_bg"
            android:orientation="vertical"
            android:elevation="20dp"
            >

            <ImageView
                style="@style/AppNameTitleStyle"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/lock"
                android:visibility="visible" />

            <TextView
                style="@style/VeryBigTextViewStyle"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/setup_create_your_password"
                android:textSize="24dp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:textColor="@color/darkGray"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/setupSetup"
                android:textAlignment="center"
                android:textSize="16sp"
                android:visibility="visible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:visibility="visible">

                <com.lockmedia.applock.uiunits.PasswordEditText
                    android:id="@+id/setupPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:PasswordEditTextHint="@string/setup_enter_password"
                    app:textValue="@={viewModel.password}" />

                <com.lockmedia.applock.uiunits.PasswordEditText
                    android:id="@+id/setupConfirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_gap"
                    android:visibility="visible"
                    app:PasswordEditTextHint="@string/setup_confirm_password"
                    app:textValue="@={viewModel.confirmPassword}" />

                <LinearLayout
                    android:id="@+id/setupPasswordStrengthLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/setup_password_strength_label"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/setupPasswordStrengthValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="13sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/setupPasswordMatchWarningTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"

                    android:text="@string/setup_password_match_warning"
                    android:textColor="@color/darkRed"
                    android:visibility="gone" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setupButton"
                android:layout_width="@dimen/wide_button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@drawable/bg_button"
                android:enabled="false"
                android:onClick="@{() -> viewModel.savePassword()}"
                android:text="@string/setup_button" />


        </LinearLayout>




        <include
            android:id="@+id/loadingOverlay"
            layout="@layout/loading_overlay" />


    </FrameLayout>
</layout>