<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright 2020-2021 Leon Latsch
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".unlock.ui.UnlockFragment">

    <data>

        <variable
            name="viewModel"
            type="com.lockmedia.applock.unlock.ui.UnlockViewModel" />

        <variable
            name="context"
            type="com.lockmedia.applock.unlock.ui.UnlockFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/unlock_frag_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
        >


            <TextView
                style="@style/VeryBigTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/unlock_title"
                android:layout_gravity="center"
               android:textColor="#C1000000"
                android:text="@string/unlock_title" />
            <TextView
                android:id="@+id/unlock_des"
                style="@style/VeryBigTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:textColor="@color/transparent_black"
                android:text="@string/unlock_title_desc" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:paddingEnd="20dp">

                <com.lockmedia.applock.uiunits.PasswordEditText
                    android:id="@+id/unlockPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:visibility="visible"

                    app:PasswordEditTextHint="@string/unlock_enter_password"
                    app:textValue="@={viewModel.password}"
                    />

                <TextView
                    android:id="@+id/unlockWrongPasswordWarningTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/unlock_wrong_password"
                    android:textColor="@color/darkRed"
                    android:visibility="gone" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/wide_button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:onClick="@{() -> viewModel.unlock()}"
                android:text="@string/unlock_button"
                android:textColor="@color/white"
                android:background="@drawable/bg_button"/>

        </LinearLayout>

        <include
            android:id="@+id/loadingOverlay"
            layout="@layout/loading_overlay" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>