<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright 2020-2022 Leon Latsch
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="context"
            type="com.lockmedia.applock.news.newfeatures.ui.NewFeaturesDialog" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/dialog_min_width"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_height="350dp"
            android:layout_width="300dp"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_green" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/big_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"

                    android:layout_height="wrap_content"
                    android:text="@string/news_new_in_title"
                    android:textColor="@color/textColor"
                   />
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        style="@style/AppNameTitleStyle"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="bottom"

                        android:src="@drawable/ic_red_tone" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                       android:layout_gravity="center"
                    android:paddingTop="5dp"
                        android:src="@drawable/ic_tone"


                        android:id="@+id/icon_image_view" />
                </FrameLayout>

                <ImageView
                    style="@style/AppNameTitleStyle"
                    android:layout_width="120dp"
                    android:layout_height="100dp"

                    android:layout_marginTop="@dimen/big_gap"

                    android:src="@drawable/ic_folder"
                   />

                <TextView
                    android:id="@+id/newsVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"


                android:src="@drawable/ic_red" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_gap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_gap"
            android:text="@string/news_view_changelog"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/small_button_width"
            android:layout_height="@dimen/button_height"
            android:onClick="@{() -> context.dismiss()}"
            android:text="@string/common_ok"
            android:textColor="@color/white"
            android:background="@drawable/bg_button"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</layout>
